<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Contenedor principal -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- SALDO -->
        <TextView
            android:id="@+id/textSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saldo_total_inicial"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="12dp"
            android:background="@android:color/white"
            android:elevation="4dp" />

        <!-- LISTA -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerGastos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:clipToPadding="false"/>
    </LinearLayout>

    <!-- FAB: Exportar -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_save"
        android:contentDescription="@string/exportar"
        app:backgroundTint="@color/teal_700" />

    <!-- FAB: Agregar -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/agregar"
        app:backgroundTint="@color/teal_700" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
